fix: increase spacing for intro description

--- a/src/Views/Form/Themes/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Themes/Sequoia/assets/css/form.scss
@@ -252,6 +252,8 @@ p {
 
 	.description {
 		max-width: 66%;
+		margin-bottom: 26px;
+		margin-top: 16px;
 	}
 
 	.income-stats {
